--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "https://prod-nnal.onrender.com/api/:splat"
+  to = "${VITE_API_URL}/api/:splat"
   status = 200
   force = true
 
